# take-screenshots

./: Cargo.toml  LICENSE  README.md
src/: main.rs
