[package]
name = "take-screenshots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fltk = "^1.3"
directories = "4.0.1"
humantime = "2.1.0"
tray-icon = "0.4.0"
